--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -17,10 +17,10 @@ $green-color-lime:    #B7D12A !default;
 $green-color-dark:    #009f06 !default;
 $green-color-light:   #ddffdd !default;
 $green-color-bright:  #11D68B !default;
-$purple-color:        #A4286A !default;
+$purple-color:        #540C32 !default;
 $light-purple-color:  lighten($purple-color, 25%);
-$pink-color:          #f92080 !default;
-$pink-color-light:    #ffdddd !default;
+$pink-color:          #540C32 !default;
+$pink-color-light:    #7D3D5F !default;
 $yellow-color:        #efcc00 !default;
 
 $grey-color:          #828282 !default;
