--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -17,9 +17,9 @@ $green-color-lime:    #B7D12A !default;
 $green-color-dark:    #009f06 !default;
 $green-color-light:   #ddffdd !default;
 $green-color-bright:  #11D68B !default;
-$purple-color:        #7D3D5F !default;
+$purple-color:        #6b2a6e !default;
 $light-purple-color:  lighten($purple-color, 25%);
-$pink-color:          #7D3D5F !default;
+$pink-color:          #6b2a6e !default;
 $pink-color-light:    lighten($pink-color, 25%);
 $yellow-color:        #efcc00 !default;
 
